# lurhook

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Progress.md  README.md  TaskDetail.md  index.html  setup.sh
.github/workflows/: ci.yml
assets/: fish.json  items.json
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/codex/: Cargo.toml
crates/codex/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/ecology/: Cargo.toml
crates/ecology/src/: lib.rs
crates/fishing/: Cargo.toml
crates/fishing/src/: lib.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: ai.rs  app.rs  input.rs  lib.rs  types.rs  ui.rs
crates/mapgen/: Cargo.toml
crates/mapgen/src/: lib.rs  snapshot_seed0.txt
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: designs.md  requirements.md
src/: lib.rs  main.rs
