[workspace]
members = [
    ".",
    "crates/game-core",
    "crates/mapgen",
    "crates/ecology",
    "crates/fishing",
    "crates/ui",
    "crates/data",
    "crates/common",
    "crates/codex"
]

[package]
name = "lurhook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Path dependency to game-core
game-core = { path = "crates/game-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
